--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-{
+﻿{
   "name": "react-as-drag",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "一个简单的React拖拽组件",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "build": "webpack --config webpack.dev.config.js --progress --hot",
     "debug": "webpack-dev-server --config webpack.dev.config.js --watch"
